--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Black+Ops+One|Fredericka+the+Great|Orbitron:400,500,700,900&amp;subset=latin-ext" rel="stylesheet">
-    
+
 </head>
 <body>
     <div class="container">
@@ -16,8 +16,12 @@
             <p>GOO</p>
         </div>
         <header class="mainHeader">
-            <div class="mainHeader__menu">
-                
+            <div class="mainHeader__button button--menu">
+                <div class="button__lines">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </div>
         </header>
     </div>
