--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <div class="container">
-        <div class="logo">
-            <p>LO</p><br>
-            <p>GOO</p>
-        </div>
         <header class="mainHeader">
+            <div class="logo">
+                <p>LO</p><br>
+                <p>GOO</p>
+            </div>
             <div class="mainHeader__button button--menu">
                 <div class="button__lines">
                     <span></span>
@@ -23,7 +23,9 @@
                     <span></span>
                 </div>
             </div>
+            <span class="mainHeader__border"></span>
         </header>
     </div>
+    <script src="js/app.js"></script>
 </body>
 </html>
