--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
             </div>
             <span class="mainHeader__border"></span>
         </header>
+        <nav class="menu">
+            <ul class="menu__list">
+                <li class="list__element"><a href="#">About Us</a></li>
+                <li class="list__element"><a href="#">Offer</a></li>
+                <li class="list__element"><a href="#">COś sie wymyśli</a></li>
+                <li class="list__element"><a href="#">Our Team</a></li>
+                <li class="list__element"><a href="#">Contact</a></li>
+            </ul>
+        </nav>
     </div>
     <script src="js/app.js"></script>
 </body>
